# contract-buddy

./: .apcgignore  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.api  Dockerfile.ingestion  INDEX.md  LICENSE  Makefile  README.md  Readme.md  cdk-outputs.json  config.yaml  document_sorter.py  fix_imports.py  list_tree.cmd  noxfile.py  noxfile.py.bak  pre-push.cmd  pyproject.toml  pytest.ini  repo_review_report_detailed_briefing_20250625_203829.txt  repo_review_report_detailed_briefing_20250625_220054.txt  requirements.in  requirements.txt  run_showcase.py  run_tests.py  src_tree.txt  test_faiss_index_ids.json
.github/: architext-instructions  copilot-instructions.md  cyber-instructions  dependabot.yml  tester-instructions.md
analysis/: summarize_experiments.py
cdk.out/: CodeCraftAiStatefulStackProd.assets.json  CodeCraftAiStatefulStackProd.template.json  CodeCraftAiStatefulStackStaging.assets.json  CodeCraftAiStatefulStackStaging.template.json  CodeCraftAiStatelessStackProd.assets.json  CodeCraftAiStatelessStackProd.template.json  CodeCraftAiStatelessStackStaging.assets.json  CodeCraftAiStatelessStackStaging.template.json  manifest.json  tree.json
codecraft-ai-docs/: README.md  docusaurus.config.js  list_tree.cmd  package.json  sidebars.js
config/: base.yaml  dev.yaml  prod.yaml  staging.yaml
docs/: BENCHMARKING.md  COST_TRACKING.md  INDEX.md  checklist.md  dependency_management.md  readme.md
infrastructure/: app.py  stateful_stack.py  stateless_stack.py
notebooks/: 00_core_api_demo.ipynb  ai_demo.ipynb  (+5 more)
(+283 files in other folders)
