[tool.poetry]
name = "codecraft-ai"
version = "0.1.0"
description = "Enterprise-ready, AWS-native AI system"
authors = ["Deon Prinsloo <Deon66@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.38.41"
langchain-text-splitters = "^0.3.8"
sentence-transformers = "^4.1.0"
aws-cdk-lib = "^2.148.0"
constructs = "^10.3.0"
fastapi = "^0.111.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
pytest-cov = "6.2.1"
ipython = "9.3.0"
pre-commit = "3.7.1"
ruff = "0.4.9"
fsspec = "2025.5.1"
scikit-learn = "1.7.0"
numpy = "1.26.4"
plotly = "6.1.2"
tabulate = "0.9.0"
pip-audit = "2.9.0"
pip-tools = "7.4.1"
safety = "3.5.2"
types-PyYAML = "6.0.12.20250516"
pandas-stubs = "2.2.0.240218"
types-jmespath = "1.0.2.20250529"
types-seaborn = "0.13.2.20250516"
types-pywin32 = "310.0.0.20250516"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
